--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h1 a {
 h2 {
 	font-size: 20px;
 	margin-top: -30px;
-	margin-right: 20px:
+	margin-right: 20px;
 	font-weight: 700;
 	text-align: left;
 	padding-left: 20px;
@@ -141,4 +141,46 @@ ul {
 }
 img {
 	width:400px;
+}
+
+.timeline {
+  max-width: 50%;
+  border: 1px solid #333;
+  padding: 10px;
+}
+
+.moji {
+	font-size: 25px;
+}
+
+.moji2 {
+	font-size: 20px;
+	color: floralwhite;
+}
+
+.m {
+	background-color: white;
+    border-radius: 10px;
+    box-shadow: 10px 10px 5px grey;
+    width: 500px;
+    margin: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
+
+section.hero .button {
+	background-image: linear-gradient(145deg, #667eea 0%, #764ba2 100%);
+	border-radius: 100px;
+	font-weight: 400;
+	font-size: 0.75em;
+	line-height: 4em;
+	width: 20em;
+	margin: 35px auto;
+	display: block;
+	text-align: center;
+	box-shadow: 0 2px 25px rgb(0 0 0 / 10%);
+	position: relative;
+	z-index: 100;
+	cursor: pointer;
 }
