--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ h3, h4, p{
 	margin-top: 0;
 	margin-bottom: 0px;
 	background: lightblue;
-	background-image: url(https://assets.komeda.co.jp/eos/shop/1140.jpg);
+	background-image: url(https://i.gyazo.com/190197e2822d10feef2148941b2db2b9.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 1500px;
